# word-cli

./: .gitignore  CLAUDE.md  README.md  example_usage.py  pyproject.toml
docs/: EDIT_PLAN.md  IMPROVEMENTS.md
src/word_cli/: __init__.py  config.py
src/word_cli/agent/: __init__.py  agent_core.py  context.py  executor.py  session.py  tools.py
src/word_cli/agent/prompts/: __init__.py  specialized_prompts.py  system_prompts.py
src/word_cli/agent/sub_agents/: __init__.py  edit_planner.py  reference_agent.py  search_agent.py  validation_agent.py
src/word_cli/cli/: __init__.py  app.py
src/word_cli/converters/: __init__.py  ast_to_docx.py  docx_to_ast.py  xml_bridge.py
src/word_cli/core/: __init__.py  ast_handler.py  document_model.py
src/word_cli/tools/: __init__.py
src/word_cli/validation/: __init__.py
src/word_cli/version/: __init__.py  diff_engine.py  version_control.py
