[tool.poetry]
name = "word-cli"
version = "0.1.0"
description = "Claude-powered CLI for editing Word documents"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "word_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.12.0"}
python-docx = "^1.1.0"
pypandoc = "^1.13"
anthropic = "^0.34.0"
rich = "^13.7.0"
pydantic = "^2.5.0"
click = "^8.1.0"
pathlib = "^1.0.1"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
word-cli = "word_cli.cli.app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true